[project]
name = "osscs"
version = "0.0.7"
authors = [
  { name="ImCocos", email="codimcocos@gmail.com" },
]
description = "Open-source crypto-secure communication system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  'cryptography>=42.0.3',
  'pydantic>=2.6.4'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/imcocos/ritatop"
Issues = "https://github.com/imcocos/ritatop/issues"
